@@ -2,6 +2,8 @@ Release Notes
 
 * 5/2/2017
   * added unified PQs
+  * added inFilePosEvtNum
+  * fixed ppE not to duplicate ES merge jobs
 
 * 4/25/2017
   * fake co-jumbo
